--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -11,12 +11,18 @@
         android:label="fragment_main_list"
         tools:layout="@layout/fragment_main_list" >
         <action
-            android:id="@+id/action_mainListFragment_to_addAndEditFragment"
-            app:destination="@id/addAndEditFragment" />
+            android:id="@+id/action_mainListFragment_to_addFragment"
+            app:destination="@id/addFragment"
+            app:enterAnim="@android:anim/fade_in"
+            app:exitAnim="@android:anim/slide_out_right" />
     </fragment>
     <fragment
-        android:id="@+id/addAndEditFragment"
-        android:name="com.example.note.fragments.AddAndEditFragment"
+        android:id="@+id/addFragment"
+        android:name="com.example.note.fragments.AddFragment"
         android:label="fragment_add_and_edit"
-        tools:layout="@layout/fragment_add_and_edit" />
+        tools:layout="@layout/fragment_add_and_edit" >
+        <action
+            android:id="@+id/action_addAndEditFragment_to_mainListFragment"
+            app:destination="@id/mainListFragment" />
+    </fragment>
 </navigation>
