--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -49,7 +49,9 @@
             android:id="@+id/action_editFragment_to_mainListFragment"
             app:destination="@id/mainListFragment"
             app:enterAnim="@android:anim/slide_in_left"
-            app:exitAnim="@android:anim/slide_out_right" />
+            app:exitAnim="@android:anim/slide_out_right"
+            app:popUpTo="@id/mainListFragment"
+            app:popUpToInclusive="true" />
         <argument
             android:name="note"
             app:argType="com.example.note.data.Note" />
